Created new model trained on data from 2015-2024
Note V1 is older than V2 GradientBoosting model

--- a/notebooks/f1_data_exploration.ipynb
+++ b/notebooks/f1_data_exploration.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -29,12 +29,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "# No need for 'import os' if you're skipping the directory creation check\n",
     "\n",
-    "# --- FastF1 Caching ---\n",
-    "# IMPORTANT: Enable caching to speed up future data loads and avoid re-downloading\n",
     "\n",
-    "# Define your cache directory path, assuming it already exists\n",
     "cache_dir = './data_cache' # This correctly points to your folder inside 'notebooks'\n",
     "\n",
     "# Directly enable the cache, assuming the directory exists\n",
@@ -55,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,12 +66,8 @@
      "output_type": "stream",
      "text": [
       "core           INFO \tLoading data for Monaco Grand Prix - Race [v3.6.0]\n",
-      "req            INFO \tNo cached data found for session_info. Loading data...\n",
-      "_api           INFO \tFetching session info data...\n",
-      "req            INFO \tData has been written to cache!\n",
-      "req            INFO \tNo cached data found for driver_info. Loading data...\n",
-      "_api           INFO \tFetching driver list...\n",
-      "req            INFO \tData has been written to cache!\n",
+      "req            INFO \tUsing cached data for session_info\n",
+      "req            INFO \tUsing cached data for driver_info\n",
       "req            INFO \tNo cached data found for session_status_data. Loading data...\n",
       "_api           INFO \tFetching session status data...\n",
       "req            INFO \tData has been written to cache!\n",
@@ -104,9 +96,7 @@
       "req            INFO \tNo cached data found for weather_data. Loading data...\n",
       "_api           INFO \tFetching weather data...\n",
       "req            INFO \tData has been written to cache!\n",
-      "req            INFO \tNo cached data found for race_control_messages. Loading data...\n",
-      "_api           INFO \tFetching race control messages...\n",
-      "req            INFO \tData has been written to cache!\n",
+      "req            INFO \tUsing cached data for race_control_messages\n",
       "core           INFO \tFinished loading data for 20 drivers: ['1', '14', '31', '44', '63', '16', '10', '55', '4', '81', '77', '21', '24', '23', '22', '11', '27', '2', '20', '18']\n"
      ]
     },
@@ -158,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -258,80 +248,6 @@
     "\n",
     "except Exception as e:\n",
     "    print(f\"\\nError retrieving lap data: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### CLL is testing\n",
-    "\n",
-    "Here I just test and see how the pandas dataframe looks like.\n",
-    "\n",
-    "Make sure to run the above cells in order to run the cells underneath too lil bro wei\n",
-    "\n",
-    "And I experiment with tsunoda's since ik lil bro is a weeb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                       Time Driver DriverNumber                LapTime  \\\n",
-      "1127 0 days 01:03:31.782000    HAM           44 0 days 00:01:28.585000   \n",
-      "1128 0 days 01:04:52.309000    HAM           44 0 days 00:01:20.527000   \n",
-      "1129 0 days 01:06:12.414000    HAM           44 0 days 00:01:20.105000   \n",
-      "1130 0 days 01:07:31.770000    HAM           44 0 days 00:01:19.356000   \n",
-      "1131 0 days 01:08:50.506000    HAM           44 0 days 00:01:18.736000   \n",
-      "\n",
-      "      LapNumber  Stint PitOutTime PitInTime            Sector1Time  \\\n",
-      "1127        1.0    1.0        NaT       NaT                    NaT   \n",
-      "1128        2.0    1.0        NaT       NaT 0 days 00:00:21.226000   \n",
-      "1129        3.0    1.0        NaT       NaT 0 days 00:00:21.081000   \n",
-      "1130        4.0    1.0        NaT       NaT 0 days 00:00:20.805000   \n",
-      "1131        5.0    1.0        NaT       NaT 0 days 00:00:20.748000   \n",
-      "\n",
-      "                Sector2Time  ... FreshTyre      Team           LapStartTime  \\\n",
-      "1127 0 days 00:00:38.830000  ...      True  Mercedes 0 days 01:02:02.950000   \n",
-      "1128 0 days 00:00:37.769000  ...      True  Mercedes 0 days 01:03:31.782000   \n",
-      "1129 0 days 00:00:37.472000  ...      True  Mercedes 0 days 01:04:52.309000   \n",
-      "1130 0 days 00:00:37.445000  ...      True  Mercedes 0 days 01:06:12.414000   \n",
-      "1131 0 days 00:00:37.010000  ...      True  Mercedes 0 days 01:07:31.770000   \n",
-      "\n",
-      "                LapStartDate  TrackStatus  Position  Deleted  DeletedReason  \\\n",
-      "1127 2023-05-28 13:03:03.927           12       5.0    False                  \n",
-      "1128 2023-05-28 13:04:32.759            1       5.0    False                  \n",
-      "1129 2023-05-28 13:05:53.286            1       5.0    False                  \n",
-      "1130 2023-05-28 13:07:13.391            1       5.0    False                  \n",
-      "1131 2023-05-28 13:08:32.747            1       5.0    False                  \n",
-      "\n",
-      "     FastF1Generated IsAccurate  \n",
-      "1127           False      False  \n",
-      "1128           False       True  \n",
-      "1129           False       True  \n",
-      "1130           False       True  \n",
-      "1131           False       True  \n",
-      "\n",
-      "[5 rows x 31 columns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\CLL\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\fastf1\\core.py:3183: FutureWarning: pick_driver is deprecated and will be removed in a future release. Use pick_drivers instead.\n",
-      "  warnings.warn((\"pick_driver is deprecated and will be removed\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "tsu_laps = session.laps.pick_driver('HAM') # U can change the TSU to NOR or PIA or whoever u wanna stalk\n",
-    "print(tsu_laps.head())\n"
    ]
   }
  ],
