--- a/notebooks/f1_model_training.ipynb
+++ b/notebooks/f1_model_training.ipynb
@@ -321,7 +321,7 @@
     "\n",
     "As a result, we see an empty value for Stroll's `'GridPosition'` and `'Position'`for the event.\n",
     "\n",
-    "As there are instances (rows 197, 241, 278, 633) where drivers starting from the pitlanes has resulted in `'GridPosition'` and `'Position'` holding the value of 0.0, we deduce that this is an anomaly on the side of the API."
+    "As there are instances where drivers starting from the pitlanes has resulted in `'GridPosition'` and `'Position'` holding the value of 0.0, we deduce that this is an anomaly on the side of the API."
    ]
   },
   {
