Done README backend, updated paths
Updated paths with new project title

--- a/notebooks/f1_model_evaluation.ipynb
+++ b/notebooks/f1_model_evaluation.ipynb
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
     "year = 2025\n",
     "round = 12\n",
     "\n",
-    "df = pd.read_csv(r'C:\\Users\\CLL\\OneDrive\\Documents\\GitHub\\F1-Predictor\\notebooks\\2015_to_2025_df.csv')\n",
+    "df = pd.read_csv(r'C:\\Users\\CLL\\OneDrive\\Documents\\GitHub\\F1-Race-Predictor\\notebooks\\2015_to_2025_df.csv')\n",
     "eval_df = df.loc[(df['Season'] == year) & (df['Round'] == round)]\n",
     "\n",
     "eval_df.head(5)"
