--- a/notebooks/f1_model_training.ipynb
+++ b/notebooks/f1_model_training.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "The core of this notebook focuses on identifying the most suitable machine learning model and its respective hyperparameters. We will systematically explore `RandomForestRegressor` and `GradientBoostingRegressor` using advanced cross-validation and hyperparameter tuning techniques from `sklearn.model_selection`. The optimization process will prioritize not just the accuracy of predicted F1 race results, but also the efficiency and generalization of the training procedure. Model performance will be rigorously evaluated using metrics such as Mean Absolute Error (MAE) and R-squared, with a particular focus on how well the model predicts the actual finishing order.\n",
     "\n",
-    "Finally, the best-performing model, along with its optimized parameters, will be serialized and saved as `f1_rank_predictor.pkl` in the `models/` directory, ready for seamless integration into the backend prediction service."
+    "Finally, the best-performing model, along with its optimized parameters, will be serialized and saved in the `models/` directory, ready for seamless integration into the backend prediction service."
    ]
   },
   {
@@ -44,7 +44,7 @@
     "\n",
     "Race data for years 2015 to 2025 are loaded into `notebooks\\data_cache`.\n",
     "\n",
-    "__NOTE__: Even with `time.sleep()` calls to avoid exceeding the API call limit, we face errors in retrieving data, both into `notebooks/data_cache` and the respective `full_race_results_df` and `full_quali_results_df` dataframes. To avoid such issues, please skip to the \"Load data from csv\" section after running the above imports."
+    "__NOTE__: Even with `time.sleep()` calls to avoid exceeding the API call limit, we face errors in retrieving data, both into `notebooks\\data_cache` and the respective `full_race_results_df` and `full_quali_results_df` dataframes. To avoid such issues, please skip to the \"Load data from csv\" section after running the above imports."
    ]
   },
   {
